force-app/main/default/objects/JobComment__c/JobComment__c.object-meta.xml
<CustomObject>
    <label>Job Comment</label>
    <nameField>
        <displayFormat>JC-{000000000}</displayFormat>
        <label>Job Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>