force-app/main/default/objects/JobComment__c/fields/JobAttempt__c.field-meta.xml
<CustomField>
    <fullName>JobAttempt__c</fullName>
    <label>Job Attempt</label>
    <referenceTo>JobAttempt__c</referenceTo>
    <relationshipLabel>Job Comments</relationshipLabel>
    <relationshipName>Job_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>