force-app/main/default/objects/JobComment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Job Comments</relationshipLabel>
    <relationshipName>Job_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>