force-app/main/default/objects/JobComment__c/fields/ProjectLocation__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Location</label>
    <referenceTo>ProjectLocation__c</referenceTo>
    <relationshipLabel>Job Comments</relationshipLabel>
    <relationshipName>Job_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>