force-app/main/default/objects/JobComment__c/fields/ProjectService__c.field-meta.xml
<CustomField>
    <fullName>ProjectService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Service</label>
    <referenceTo>ProjectService__c</referenceTo>
    <relationshipLabel>Job Comments</relationshipLabel>
    <relationshipName>Job_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>